POWR-806 initial config of webform paragraph, composer updates, 2 new forms for demo

--- a/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
+++ b/web/sites/default/config/field.field.paragraph.service_step.field_step_action_button.yml
@@ -14,6 +14,7 @@ dependencies:
     - paragraphs.paragraphs_type.service_step
     - paragraphs.paragraphs_type.simple_text
     - paragraphs.paragraphs_type.telephone_button
+    - paragraphs.paragraphs_type.webform
   module:
     - custom_add_another
     - entity_reference_revisions
@@ -45,6 +46,7 @@ settings:
       columns_equal: columns_equal
       card_deck: card_deck
       simple_text: simple_text
+      webform: webform
     target_bundles_drag_drop:
       form_app_button:
         enabled: true
@@ -106,4 +108,7 @@ settings:
       video:
         weight: -22
         enabled: false
+      webform:
+        enabled: true
+        weight: 42
 field_type: entity_reference_revisions
