--- a/web/sites/default/config/field.storage.paragraph.field_embed_webform.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_embed_webform.yml
@@ -1,23 +1,23 @@
-uuid: fa8d3b59-7655-43e7-812b-ebacd2cbe7cd
+uuid: 68ea10d3-9b17-49b4-8591-d28e48d62ae9
 langcode: en
 status: true
 dependencies:
   module:
-    - entity_reference_revisions
     - field_permissions
     - paragraphs
+    - webform
 third_party_settings:
   field_permissions:
     permission_type: public
-id: paragraph.field_step_action_button
-field_name: field_step_action_button
+id: paragraph.field_embed_webform
+field_name: field_embed_webform
 entity_type: paragraph
-type: entity_reference_revisions
+type: webform
 settings:
-  target_type: paragraph
-module: entity_reference_revisions
+  target_type: webform
+module: webform
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
