--- a/composer.json
+++ b/composer.json
@@ -146,7 +146,8 @@
                 "2797583 - Dynamically provide action plugins for every moderation state change": "https://www.drupal.org/files/issues/publish_unpublish-2797583-62.patch",
                 "2885278 - Node local tasks tabs do not appear on node revisions": "https://www.drupal.org/files/issues/2018-04-19/node-revisions-missing-local-tasks-2885278-11.patch",
                 "2769289 - Revision User information not displayed in views when content revision user is selected for View type Content": "https://www.drupal.org/files/issues/2018-09-07/node_revision_author-2769289-11.patch",
-                "2953331 - Add a views sort handler for sorting content by moderation state": "https://www.drupal.org/files/issues/2018-07-09/2953331-6.patch"
+                "2953331 - Add a views sort handler for sorting content by moderation state": "https://www.drupal.org/files/issues/2018-07-09/2953331-6.patch",
+                "3040210 - Updating twig/twig to v1.38.2 (included in Drupal 8.6.11) causes fatal error when embed tags are used in templates": "https://www.drupal.org/files/issues/2019-03-14/3040210-PASS.patch"
             },
             "drupal/ctools": {
                 "Views exposed filters missing autosubmit option https://www.drupal.org/node/2475595": "https://www.drupal.org/files/issues/2475595-ctools-autocomplete-fix-24.patch"
@@ -170,9 +171,6 @@
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
-            },
-            "drupal/entity_browser": {
-                "https://www.drupal.org/project/entity_browser/issues/3031561": "https://www.drupal.org/files/issues/2019-02-26/3031561-fix-temp-store-ref-2.patch"
             }
         },
         "merge-plugin": {
