POWR-771-2 Reset image displays and create featured media view

--- a/web/sites/default/config/core.entity_view_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.default.yml
@@ -7,9 +7,8 @@ dependencies:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
-    - responsive_image.styles.paragraph_image
   module:
-    - responsive_image
+    - image
 _core:
   default_config_hash: VLDxfMVPTkd2xvOjFMCh3kWmaOYnd03zggFXuUXQVEY
 id: media.image.default
@@ -36,12 +35,12 @@ content:
     type: entity_reference_label
     region: content
   image:
-    type: responsive_image
+    type: image
     weight: 1
     label: hidden
     settings:
-      responsive_image_style: paragraph_image
       image_link: ''
+      image_style: ''
     third_party_settings: {  }
     region: content
   name:
