--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.media_browser
     - field.field.node.news.field_body
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
@@ -23,8 +22,8 @@ dependencies:
     - conditional_fields
     - content_moderation
     - datetime
-    - entity_browser
     - maxlength
+    - media_library
     - path
     - text
 id: node.news.default
@@ -86,18 +85,9 @@ content:
     type: datetime_default
     region: content
   field_featured_media:
-    type: entity_browser_entity_reference
+    type: media_library_widget
     weight: 3
-    settings:
-      entity_browser: media_browser
-      field_widget_display: rendered_entity
-      field_widget_edit: true
-      field_widget_remove: true
-      selection_mode: selection_append
-      field_widget_display_settings:
-        view_mode: embedded_100
-      field_widget_replace: false
-      open: false
+    settings: {  }
     region: content
     third_party_settings:
       conditional_fields:
