--- a/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.media_library.yml
@@ -8,7 +8,7 @@ dependencies:
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
     - media.type.image
-    - responsive_image.styles.banner
+    - responsive_image.styles.paragraph_image
   module:
     - ds
     - responsive_image
@@ -24,7 +24,7 @@ content:
     weight: 1
     label: hidden
     settings:
-      responsive_image_style: banner
+      responsive_image_style: paragraph_image
       image_link: ''
     third_party_settings:
       ds:
