--- a/.lando.yml
+++ b/.lando.yml
@@ -4,6 +4,8 @@ config:
   framework: drupal8
   site: portlandor
   id: 5c6715db-abac-4633-ada8-1c9efe354629
+  # Disable the SOLR index
+  index: false
 services:
   appserver:
     build_as_root:
