POWR-854 - In group events view, changed exposed filter relative date from "today" to "now" for testing purposes.

--- a/web/sites/default/config/views.view.group_events.yml
+++ b/web/sites/default/config/views.view.group_events.yml
@@ -665,7 +665,7 @@ display:
           admin_label: ''
           operator: between
           value:
-            min: today
+            min: now
             max: '+30 days'
             value: today
             type: offset
