POWR-508 Install block_group

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "drupal/adminimal_theme": "^1.3",
         "drupal/allowed_formats": "^1.1",
         "drupal/anonymous_login": "^1.1",
+        "drupal/blockgroup": "^1.1",
         "drupal/chosen": "^2.5",
         "drupal/clamav": "^1.0",
         "drupal/components": "^1.0",
