POWR-508 Move facets to blockgroup

--- a/web/sites/default/config/block.block.cloudy_services_by_action.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_action.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_action
 theme: cloudy
-region: content
-weight: -5
+region: filters_search_page
+weight: -13
 provider: null
 plugin: 'facet_block:services_by_action'
 settings:
