--- a/web/sites/default/config/block.block.cloudy_services_by_topic.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_topic.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_topic
 theme: cloudy
-region: content
-weight: -4
+region: filters_search_page
+weight: -11
 provider: null
 plugin: 'facet_block:services_by_topic'
 settings:
