--- a/web/sites/default/config/block.block.aggregatedtopic.yml
+++ b/web/sites/default/config/block.block.aggregatedtopic.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: aggregatedtopic
 theme: cloudy
-region: content
-weight: -2
+region: filters_search_page
+weight: -15
 provider: null
 plugin: 'facet_block:aggregated_topic'
 settings:
