--- a/web/sites/default/config/block.block.cloudy_services_by_audience.yml
+++ b/web/sites/default/config/block.block.cloudy_services_by_audience.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_services_by_audience
 theme: cloudy
-region: content
-weight: -3
+region: filters_search_page
+weight: -12
 provider: null
 plugin: 'facet_block:services_by_audience'
 settings:
