--- a/web/sites/default/config/block.block.grouptitle.yml
+++ b/web/sites/default/config/block.block.grouptitle.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: grouptitle
 theme: cloudy
-region: content
-weight: -1
+region: filters_search_page
+weight: -14
 provider: null
 plugin: 'facet_block:group_title'
 settings:
