POWR-609 Use draggable views module for sorting top searches

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
         "drupal/custom_add_another": "^1.0@beta",
+        "drupal/draggableviews": "^1.2",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
         "drupal/eva": "^1.3",
