--- a/web/sites/default/config/views.view.top_search_content.yml
+++ b/web/sites/default/config/views.view.top_search_content.yml
@@ -8,8 +8,8 @@ dependencies:
     - system.menu.admin
     - user.role.administrator
   module:
-    - datetime
     - datetime_range
+    - draggableviews
     - node
     - user
 _core:
@@ -59,47 +59,39 @@ display:
           grouping: {  }
           row_class: ''
           default_row_class: true
-          override: true
+          override: false
           sticky: true
           caption: ''
           summary: ''
           description: ''
           columns:
-            node_bulk_form: node_bulk_form
             title: title
+            draggableviews: draggableviews
             field_active_time_frame: field_active_time_frame
-            type: type
             status: status
             operations: operations
           info:
-            node_bulk_form:
+            title:
+              sortable: false
+              default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            title:
-              sortable: true
-              default_sort_order: asc
+            draggableviews:
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             field_active_time_frame:
-              sortable: true
-              default_sort_order: asc
-              align: ''
-              separator: ''
-              empty_column: false
-              responsive: ''
-            type:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
             status:
-              sortable: true
+              sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
@@ -110,7 +102,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-          default: field_active_time_frame
+          default: title
           empty_table: true
       row:
         type: fields
@@ -135,6 +127,60 @@ display:
           settings:
             link_to_entity: true
           plugin_id: field
+        draggableviews:
+          id: draggableviews
+          table: node_field_data
+          field: draggableviews
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          action_title: Action
+          include_exclude: exclude
+          selected_actions: null
+          entity_type: node
+          entity_field: nid
+          plugin_id: draggable_views_field
         field_active_time_frame:
           id: field_active_time_frame
           table: node__field_active_time_frame
@@ -444,19 +490,18 @@ display:
           entity_field: status
           plugin_id: boolean
       sorts:
-        field_active_time_frame_value:
-          id: field_active_time_frame_value
-          table: node__field_active_time_frame
-          field: field_active_time_frame_value
+        weight:
+          id: weight
+          table: draggableviews_structure
+          field: weight
           relationship: none
           group_type: group
           admin_label: ''
           order: ASC
           exposed: false
           expose:
-            label: 'Active time frame (field_active_time_frame)'
-          plugin_id: datetime
-          entity_type: node
+            label: ''
+          plugin_id: standard
       title: 'Top Searches'
       empty:
         area_text_custom:
@@ -496,7 +541,7 @@ display:
           empty: false
           tokenize: false
           content:
-            value: '<p>Top searches are used to present users a curated link list of popular and/or timely search topics under the search box on the homepage. The top searches are sorted by start date in descending order (searches with no start/end date appear last). At most 7 top searches will appear on the homepage.</p>'
+            value: '<p>Top searches are used to present users a curated link list of popular and/or timely search topics under the search box on the homepage. Drag items into the desired sort order. At most 7 top searches will appear on the homepage.</p>'
             format: rich_text
           plugin_id: text
     display_plugin: default
@@ -511,7 +556,7 @@ display:
         - url.query_args
         - 'user.node_grants:view'
         - user.roles
-      max-age: -1
+      max-age: 0
       tags:
         - 'config:field.storage.node.field_active_time_frame'
         - extensions
@@ -546,7 +591,7 @@ display:
         - url.query_args
         - 'user.node_grants:view'
         - user.roles
-      max-age: -1
+      max-age: 0
       tags:
         - 'config:field.storage.node.field_active_time_frame'
         - extensions
