--- a/web/sites/default/config/views.view.top_searches.yml
+++ b/web/sites/default/config/views.view.top_searches.yml
@@ -387,19 +387,18 @@ display:
             group_items: {  }
           plugin_id: datetime
       sorts:
-        field_active_time_frame_value:
-          id: field_active_time_frame_value
-          table: node__field_active_time_frame
-          field: field_active_time_frame_value
+        weight:
+          id: weight
+          table: draggableviews_structure
+          field: weight
           relationship: none
           group_type: group
           admin_label: ''
-          order: DESC
+          order: ASC
           exposed: false
           expose:
             label: ''
-          granularity: day
-          plugin_id: datetime
+          plugin_id: standard
         title:
           id: title
           table: node_field_data
@@ -452,6 +451,7 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_search_link'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -482,3 +482,4 @@ display:
       max-age: -1
       tags:
         - 'config:field.storage.node.field_search_link'
+        - extensions
