POWR-856 Restore cache to get behat

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -179,13 +179,13 @@ run_tests: &run_tests
         key: terminus_-{{ checksum "composer.lock" }}
         paths:
           - "/tmp/vendor"
+    - restore_cache: *restore_cache
     - run:
         name: Run tests against Pantheon
         when: on_success
         command: |
           export PATH=/var/www/html/vendor/bin:/tmp/vendor/pantheon-systems/terminus/bin:$PATH
-          terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email"
-          terminus aliases
+          terminus auth:login --machine-token="$eGov_Terminus" --email="$eGov_Email" && terminus aliases
           # TODO: revisit this when we only deploy non-dev packages.
           # Install Behat and its dependencies.
           # composer install
