--- a/web/sites/default/config/views.view.services_index.yml
+++ b/web/sites/default/config/views.view.services_index.yml
@@ -303,7 +303,7 @@ display:
         options: {  }
       defaults:
         cache: false
-      exposed_block: false
+      exposed_block: true
     cache_metadata:
       max-age: -1
       contexts:
