POWR-508 Add exposed form blocks to layout

--- a/web/sites/default/config/block.block.block_group_search_page_filters.yml
+++ b/web/sites/default/config/block.block.block_group_search_page_filters.yml
@@ -12,7 +12,7 @@ dependencies:
 id: block_group_search_page_filters
 theme: cloudy
 region: content
-weight: -11
+weight: -9
 provider: null
 plugin: 'block_group:6c76ea80-89c3-4376-9cb5-3c99a1046085'
 settings:
@@ -23,6 +23,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/search/*\r\n/services"
+    pages: "/search/*\r\n/services\r\n/bureaus-offices"
     negate: false
     context_mapping: {  }
