--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbyaudience.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbyaudience
 theme: cloudy
-region: content
-weight: 1
+region: filters_search_page
+weight: -10
 provider: null
 plugin: 'facet_block:bureaus_by_audience'
 settings:
