--- a/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
+++ b/web/sites/default/config/block.block.cloudy_bureausandofficesbytopic.yml
@@ -11,8 +11,8 @@ dependencies:
     - cloudy
 id: cloudy_bureausandofficesbytopic
 theme: cloudy
-region: content
-weight: 0
+region: filters_search_page
+weight: -11
 provider: null
 plugin: 'facet_block:bureaus_by_topic'
 settings:
