--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,4 +188,4 @@ workflows:
   deploy_and_test:
     jobs:
       # Test will be started by QuickSilver after the sync_code event
-      - deploy
+      - build-and-deploy
