--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,7 +161,10 @@ jobs:
             fi
       - shared-post-job-steps
   test:
-    executor: ci-executor
+    docker:
+      - image: kxwang/drupal-ci:circleci
+      - image: selenium/standalone-chrome-debug:3.7.1-beryllium
+    working_directory: /var/www/html
     steps:
       - shared-pre-job-steps
       - run:
