--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,7 +89,10 @@ commands:
 
 jobs:
   build-and-deploy:
-    executor: ci-executor
+    docker:
+      - image: kxwang/drupal-ci:circleci
+      - image: selenium/standalone-chrome-debug:3.7.1-beryllium
+    working_directory: /var/www/html
     steps:
       - shared-pre-job-steps
       - run:
