POWR-830 Add ability to add groups to a menu

--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.group.program.field_enable_services_and_inform
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
@@ -30,6 +31,7 @@ dependencies:
     - field_group
     - image
     - maxlength
+    - menu_link
 third_party_settings:
   field_group:
     group_contact_information:
@@ -153,7 +155,7 @@ content:
     type: boolean_checkbox
     region: content
   field_legacy_path:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -168,6 +170,12 @@ content:
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_menu_link:
+    weight: 9
+    settings: {  }
+    third_party_settings: {  }
+    type: menu_link_default
+    region: content
   field_parent_group:
     weight: 2
     settings: {  }
