--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
+    - field.field.group.bureau_office.field_menu_link
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
@@ -101,6 +102,7 @@ hidden:
   field_enable_services_and_inform: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_official_organization_name: true
   field_parent_group: true
   field_phone: true
