--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -97,6 +97,7 @@ module:
   media_entity_twitter: 0
   media_library: 0
   menu_breadcrumb: 0
+  menu_link: 0
   menu_ui: 0
   metatag: 0
   metatag_open_graph: 0
