--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
         "drupal/menu_breadcrumb": "^1.8",
+        "drupal/menu_link": "^1.0@alpha",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/pantheon_advanced_page_cache": "^1.0",
@@ -174,6 +175,9 @@
             },
             "drupal/entity_browser": {
                 "https://www.drupal.org/project/entity_browser/issues/3031561": "https://www.drupal.org/files/issues/2019-02-26/3031561-fix-temp-store-ref-2.patch"
+            },
+            "drupal/menu_link": {
+                "3019509 - Menu item without attributes causes a notice": "https://www.drupal.org/files/issues/2018-12-10/menu_link-attributes-error-3019509-3.patch"
             }
         },
         "merge-plugin": {
