--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -17,6 +17,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
+    - field.field.group.bureau_office.field_menu_link
     - field.field.group.bureau_office.field_official_organization_name
     - field.field.group.bureau_office.field_parent_group
     - field.field.group.bureau_office.field_phone
@@ -32,6 +33,7 @@ dependencies:
     - field_group
     - image
     - maxlength
+    - menu_link
 third_party_settings:
   field_group:
     group_contact_information:
@@ -163,7 +165,7 @@ content:
     type: boolean_checkbox
     region: content
   field_legacy_path:
-    weight: 10
+    weight: 11
     settings:
       size: 60
       placeholder: ''
@@ -178,6 +180,12 @@ content:
       progress_indicator: throbber
     region: content
     third_party_settings: {  }
+  field_menu_link:
+    weight: 10
+    settings: {  }
+    third_party_settings: {  }
+    type: menu_link_default
+    region: content
   field_official_organization_name:
     weight: 1
     settings:
