--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.group.program.field_enable_services_and_inform
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
+    - field.field.group.program.field_menu_link
     - field.field.group.program.field_parent_group
     - field.field.group.program.field_phone
     - field.field.group.program.field_shortname_or_acronym
@@ -41,56 +42,6 @@ targetEntityType: group
 bundle: program
 mode: default
 content:
-  field_enable_guides_and_informat:
-    weight: 2
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_news_and_notices_me:
-    weight: 3
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_programs_menu_item:
-    weight: 4
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_projects_menu_item:
-    weight: 5
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_services_and_inform:
-    weight: 6
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
   field_summary:
     weight: 0
     settings:
@@ -141,8 +92,14 @@ hidden:
   field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_programs_menu_item: true
+  field_enable_projects_menu_item: true
+  field_enable_services_and_inform: true
   field_legacy_path: true
   field_logo: true
+  field_menu_link: true
   field_parent_group: true
   field_phone: true
   field_shortname_or_acronym: true
