POWR-856 Rename the main workflow.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -221,7 +221,7 @@ jobs:
 # Declare a workflow that runs all of our jobs in parallel.
 workflows:
   version: 2
-  deploy_and_test:
+  deploy_workflow:
     jobs:
       # Test will be started by QuickSilver after the sync_code event
       - deploy
