--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,6 +3,7 @@ default:
     default:
       contexts:
         - FeatureContext
+        - GroupsContext
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
