POWR-842 - trying subcontext from groups patch

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,7 +3,6 @@ default:
     default:
       contexts:
         - FeatureContext
-        - GroupsContext
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
@@ -33,3 +32,6 @@ default:
         success_message_selector: '.alert.alert-success'
       drush:
         binary: drush
+      subcontexts:
+        paths:
+          - "/var/www/modules/contrib/group"
